update-gpc commit

--- a/prototype_notebooks/prototyping.ipynb
+++ b/prototype_notebooks/prototyping.ipynb
@@ -1806,13 +1806,13 @@
     "    cred = import_module(\"credentials\", package=pathToCredentials)\n",
     "\n",
     "    queryString = _createGpClinicalQueryString(searchCodeDict)\n",
-    "    payload =  _get_payload(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType)\n",
+    "    payload =  download_gpclinical(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType)\n",
     "    response = _download_data(payload)\n",
     "    eids = _extract_eids(response)\n",
     "    \n",
     "    if not includeCodes:\n",
     "        queryString = 'SELECT distinct eid FROM gp_clinical'\n",
-    "        payload =  _get_payload(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType)\n",
+    "        payload =  download_gpclinical(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType)\n",
     "        response = _download_data(payload)\n",
     "        alleids = _extract_eids(response)\n",
     "        eids = list(set(alleids) - set(eids)) \n",
