--- a/examples/example-module.ipynb
+++ b/examples/example-module.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cohort_dictionary = {\"all_of\": [], \"any_of\": [[\"read_3\", \"F4252\"], [\"read_3\", \"F4251\"]], \"none_of\": []}\n"
+    "cohort_dictionary = {\"all_of\": [], \"any_of\": [[\"read_3\", \"F4252\"], [\"read_3\", \"F4251\"]], \"none_of\": []}\n",
+    "{\"any_of\": [[\"read_3\", \"XE18j\"], [\"read_3\", \"F4251\"], [\"read_3\", \"F4252\"], [\"read_3\", \"XE18j\"], [\"read_3\", \"XE18j\"]]}"
    ]
   },
   {
@@ -77,18 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'uk' is not defined",
+     "ename": "AttributeError",
+     "evalue": "module 'ukbcohort' has no attribute 'query'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-e3ded1ad0efb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mwrite_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"example_cohort\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m queries = uk.query.create_queries(cohort_criteria=cohort_criteria_updated, main_filename=main_filename,\n\u001b[0m\u001b[1;32m      7\u001b[0m                                portal_access=True)\n\u001b[1;32m      8\u001b[0m cohort_ids = uk.query.query_databases(cohort_criteria=cohort_dictionary, queries=queries, main_filename=main_filename, \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'uk' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-e3ded1ad0efb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mwrite_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"example_cohort\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m queries = uk.query.create_queries(cohort_criteria=cohort_criteria_updated, main_filename=main_filename,\n\u001b[0m\u001b[1;32m      7\u001b[0m                                portal_access=True)\n\u001b[1;32m      8\u001b[0m cohort_ids = uk.query.query_databases(cohort_criteria=cohort_dictionary, queries=queries, main_filename=main_filename, \n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'ukbcohort' has no attribute 'query'"
      ]
     }
    ],
@@ -105,6 +106,13 @@
     "                                      driver_path=driver_path, driver_type=driver_type, \n",
     "                                      timeout=120, portal_access=True, out_filename=out_filename, write=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -123,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
