--- a/prototype_notebooks/prototyping query.ipynb
+++ b/prototype_notebooks/prototyping query.ipynb
@@ -430,7 +430,7 @@
     "    --------\n",
     "    queryString: str\n",
     "\n",
-    "    The queryString then needs to be copied to the UKBB data website to download a list of relevant eids or used with _get_payload()\n",
+    "    The queryString then needs to be copied to the UKBB data website to download a list of relevant eids or used with download_gpclinical()\n",
     "    \"\"\"\n",
     "\n",
     "    queryString = 'SELECT distinct eid FROM gp_clinical WHERE ('\n",
@@ -714,13 +714,13 @@
     "    cred = import_module(\"credentials\", package=pathToCredentials)\n",
     "\n",
     "#     queryString = _createGpClinicalQueryString(searchCodeDict)\n",
-    "    payload =  _get_payload(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType, timeOut)\n",
+    "    payload =  download_gpclinical(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType, timeOut)\n",
     "    response = _download_data(payload)\n",
     "    eids = _extract_eids(response)\n",
     "\n",
     "    if not includeCodes:\n",
     "        queryString = 'SELECT distinct eid FROM gp_clinical'\n",
-    "        payload =  _get_payload(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType, timeOut)\n",
+    "        payload =  download_gpclinical(queryString, cred.applicationId, cred.userName, cred.password, pathToDriver, driverType, timeOut)\n",
     "        response = _download_data(payload)\n",
     "        alleids = _extract_eids(response)\n",
     "        eids = list(set(alleids) - set(eids))\n",
